# obfuscator

./: .gitignore  Cargo.toml  README.md
docs/: index.html
src/: main.rs
test_project/: Cargo.toml  index.html  style.css
test_project/src/: main.rs
test_project_obfuscated/: index.html  style.css
test_project_obfuscated/src/: main.rs
tests/: e2e.rs
