[package]
name = "obfuscator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
proc-macro2 = "1.0.106"
quote = "1.0.44"
rand = { version = "0.9.2", features = ["small_rng"] }
ra_ap_base_db = "0.0.316"
ra_ap_ide = "0.0.316"
ra_ap_ide_db = "0.0.316"
ra_ap_load-cargo = "0.0.316"
ra_ap_paths = "0.0.316"
ra_ap_project_model = "0.0.316"
ra_ap_vfs = "0.0.316"
ra_ap_syntax = "0.0.316"
regex = "1.12.2"
syn = { version = "2.0.114", features = ["full", "visit", "visit-mut"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.20.0"
